--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-fetch": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
